# setup.cfg
[metadata]
name = django-stapler
version = 1.0
description = A package providing a multi-ModelForm solution for django
license = MIT
long_description = file:README.md
url = https://github.com/danjer/django-stapler
author: Daan van den Akker

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=2.2